--- a/JavaApplication8/nbproject/project.properties
+++ b/JavaApplication8/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication8.JavaApplication8
+main.class=lab8.HealthRecordDemo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
